# Orka-AI

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
core/: logging.py
examples/: __init__.py  basic.py
orka/: __init__.py  cli.py  dashboard.py  main.py
orka/agent/: orka_agent.py
orka/config/: __init__.py  loader.py  models.py  settings.py
orka/connectors/: __init__.py  base.py  gmail.py  google_sheets.py  hubspot.py  notion.py  slack.py
orka/core/: __init__.py  exceptions.py  llm.py  llm_providers.py  logging.py  memory.py  observability.py  results.py  run_store.py  storage.py  validation.py
orka/graph/: __init__.py  builder.py  nodes.py  planner.py  state.py
orka/llms/: __init__.py  claude.py  gemini.py  groq.py  openai.py
orka/services/: __init__.py  crm.py  email.py
orka/tools/: __init__.py  decorators.py  registry.py
tests/: test_agent.py  test_api.py  test_config.py  test_connectors.py  test_deployment.py  test_graph.py  test_planner.py  test_storage.py  test_tools.py
