[project]
name = "orka-ai"
version = "0.1.0"
description = "LangGraph-based AI action orchestration framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "fastapi",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orka*"]
